--- a/Micro service/src/main/resources/application.properties
+++ b/Micro service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=alpha
+spring.application.name=alpha {can be any name} But this will use for service discovery }
 server.port = 9090
 
-eureka.client.serviceUrl.defaultZone= http://${registry.host:localhost}:${registry.port:8761}/eureka/
+eureka.client.serviceUrl.defaultZone= http://${registry.host:localhost}:${registry.port:8761}/eureka/ {url of eureka server}
 eureka.client.healthcheck.enabled= true
 eureka.instance.leaseRenewalIntervalInSeconds= 1
 eureka.instance.leaseExpirationDurationInSeconds= 2
