--- a/loadBalancer/src/main/resources/application.properties
+++ b/loadBalancer/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=loadBalancer
 server.port=8111
-eureka.client.serviceUrl.defaultZone=http://${registry.host:172.16.31.81}:${registry.port:8761}/eureka/
+eureka.client.serviceUrl.defaultZone=http://${registry.host:172.16.31.81}:${registry.port:8761}/eureka/ {Eureka server ip}
 eureka.client.healthcheck.enabled=true
 eureka.instance.leaseRenewalIntervalInSeconds=5
 eureka.instance.leaseExpirationDurationInSeconds=15
-zuul.routes.backtest.url=http://localhost:8700
+zuul.routes.backtest.url=http://localhost:8700 {Add any url to forward the reques if no services available. can be invalid. Then Error will return }
 zuul.host.socket-timeout-millis=300000
